# fastapi-sample

./: README.md  pyproject.toml
fastapi_sample/: main.py
fastapi_sample/src/app/: app.py
fastapi_sample/src/router/: predict.py  router.py
tests/: test_fastapi_sample.py
