[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["fransoaardi <fransoaardi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'fastapi_sample.main:run'